try to fix Prev on iOS

--- a/components/Card/component.module.css
+++ b/components/Card/component.module.css
@@ -26,18 +26,17 @@
 
 @media (min-width: 850px) {
     .card {
-        height: 75%;
-        aspect-ratio: 1/1;
-        min-width: 50vw;
+        height: 66%;
+        min-width: 42vh;
     }
 
     .cardOpen {
-        animation: cardOpeningDesktop 750ms ease-in-out forwards;
+        animation: cardOpeningDesktop 2s ease-in-out forwards;
     }
     
     .cardClosing {
         
-        animation: cardClosingDesktop 750ms ease-in-out forwards;
+        animation: cardClosingDesktop 1s ease-in-out forwards;
     }
     
 }
@@ -52,9 +51,9 @@
     50% {
         transform: rotateY(180deg);
         min-width: 65vw;
-         height: 60%;
-         border-radius: 16px;
-         border: 2px solid white;
+        height: 60%;
+        border-radius: 16px;
+        border: 1px solid white;
     }
     100% {
         transform: rotateY(180deg);
@@ -81,50 +80,57 @@
     100%{
         transform: rotateY(0deg);
         min-width: 65vw;
-         height: 60%;
-         border-radius: 16px;
-         border: 2px solid white;
+        height: 60%;
+        border-radius: 16px;
+        border: 1px solid white;
     }
 }
     
 
 
 @keyframes cardOpeningDesktop {
+    
     0%{
-        transform: rotateX(0);
-        height: 70%;
-        border-radius: 16px;
-        border: 2px solid white;
-        min-width: none;
+        transform: rotateY(0deg);
     }
-    33% {
+    50% {
         transform: rotateY(180deg);
+        height: 66%;
+        min-width: 42vh;
     }
     100% {
         transform: rotateY(180deg);
         height: 100%;
         border: 0;
         border-radius: 0;
-        min-width: 100vw ;
+        min-width: 100vw;
     }
 }
 
- @keyframes cardClosingDesktop {
-    from{
+ /* @keyframes cardClosingDesktop {
+
+    0%{
         transform: rotateY(180deg);
         border-radius: 0;
         border: 0;
         min-width: 100vw ;
-        height: 100%;
+        height: 100%; 
     }
-    to{
-        transform: rotateY(0deg);
-         min-width: none;
-         height: 70%;
+    50% {
+        transform: rotateY(180deg);
+        height: 75%;
+        aspect-ratio: 1/1;
+        min-width: 50vw;
          border-radius: 16px;
          border: 2px solid white;
     }
-}
+    
+    100%{
+        transform: rotateY(360deg);
+        
+    }
+
+} */
 
 
 .front {
